# ai-projects

./: .env  .gitignore  CHANGELOG.md  finance.csv  main.py  report.txt  requirements.txt  test_scraping.py  tests.py
CrewAi_Projects/jokes/: README.md  pyproject.toml
CrewAi_Projects/jokes/src/jokes/: crew.py  jokes_page.py  make_joke.py
CrewAi_Projects/jokes/src/jokes/config/: agents.yaml  tasks.yaml
CrewAi_Projects/jokes/src/jokes/tools/: browser_tools_v2.py
CrewAi_Projects/stockanalysis/: README.md  pyproject.toml
CrewAi_Projects/stockanalysis/src/stockanalysis/: crew.py  generate_research_report_crew.py  main.py
CrewAi_Projects/stockanalysis/src/stockanalysis/config/: agents.yaml  tasks.yaml
CrewAi_Projects/stockanalysis/src/stockanalysis/reports/filling_analysis/: filling_analysis_report_0.txt  filling_analysis_report_gemini-1.5-flash_1.txt
CrewAi_Projects/stockanalysis/src/stockanalysis/reports/financial_analysis/: financial_analysis_report_0.txt  financial_analysis_report_gemini-1.5-flash_1.txt
CrewAi_Projects/stockanalysis/src/stockanalysis/reports/recommend/: recommend_report_0.txt  recommend_report_gemini-1.5-flash_1.txt
CrewAi_Projects/stockanalysis/src/stockanalysis/reports/research/: research_report_0.txt  research_report_gemini-1.5-flash_1.txt
CrewAi_Projects/stockanalysis/src/stockanalysis/reports/unique_recommend/: unique_recommend_report_0.txt  (+1 more)
CrewAi_Projects/stockanalysis/src/stockanalysis/tools/: browser_tools.py  browser_tools_v2.py  calculator_tools.py  search_tools.py  search_tools_v2.py  sec_tools.py
(+34 files in other folders)
