[tool.poetry]
name = "jokes"
version = "0.1.0"
description = "jokes using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
jokes = "jokes.main:run"
run_crew = "jokes.main:run"
train = "jokes.main:train"
replay = "jokes.main:replay"
test = "jokes.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
