[project]
name = "stockanalysis"
version = "0.1.0"
description = "StockAnalysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
stockanalysis = "stockanalysis.main:run"
run_crew = "stockanalysis.main:run"
train = "stockanalysis.main:train"
replay = "stockanalysis.main:replay"
test = "stockanalysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
